--- a/Index.html
+++ b/Index.html
@@ -19,13 +19,13 @@
           </head>
           
     <!-- Css Styles -->
-    <link rel="stylesheet" href="css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="/MoodflixNewProject/tree/main/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="/MoodflixNewProject/tree/main/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="/MoodflixNewProject/tree/main/css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="/MoodflixNewProject/tree/main/css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="/MoodflixNewProject/tree/main/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="/MoodflixNewProject/tree/main/css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="/MoodflixNewProject/tree/main/css/style.css" type="text/css">
 </head>
 
 <body>
