--- a/Index.html
+++ b/Index.html
@@ -7,6 +7,7 @@
     <meta name="keywords" content="Videograph, unica, creative, html">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="./css/style.css" type="text/css"> 
     <title>MoodFlix</title>
 
     <!-- Google Font -->
