--- a/Index.html
+++ b/Index.html
@@ -19,13 +19,20 @@
           </head>
           
     <!-- Css Styles -->
-    <link rel="stylesheet" href="./css/bootstrap.min.css" type="text/css">
-    <link rel="stylesheet" href="./css/font-awesome.min.css" type="text/css">
-    <link rel="stylesheet" href="./css/elegant-icons.css" type="text/css">
-    <link rel="stylesheet" href="./css/owl.carousel.min.css" type="text/css">
-    <link rel="stylesheet" href="./css/magnific-popup.css" type="text/css">
-    <link rel="stylesheet" href="./css/slicknav.min.css" type="text/css">
-    <link rel="stylesheet" href="./css/style.css" type="text/css">
+    <link rel="stylesheet" href="MoodflixNewProject
+/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="MoodflixNewProject
+/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="MoodflixNewProject
+/css/elegant-icons.css" type="text/css">
+    <link rel="stylesheet" href="MoodflixNewProject
+/css/owl.carousel.min.css" type="text/css">
+    <link rel="stylesheet" href="MoodflixNewProject
+/css/magnific-popup.css" type="text/css">
+    <link rel="stylesheet" href="MoodflixNewProject
+/css/slicknav.min.css" type="text/css">
+    <link rel="stylesheet" href="MoodflixNewProject
+/css/style.css" type="text/css">
 </head>
 
 <body>
