--- a/Index.html
+++ b/Index.html
@@ -2,6 +2,15 @@
 <html lang="zxx">
 
 <head>
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-QVTNWQ9P4B"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-QVTNWQ9P4B');
+</script>
     <meta charset="UTF-8">
     <meta name="description" content="Videograph Template">
     <meta name="keywords" content="Videograph, unica, creative, html">
